<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d1b2a"
    tools:context=".MainActivity">

     <TextView
         android:id="@+id/solution_tv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/result_tv"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:textAlignment="textEnd"
         android:textColor="@color/white"
         android:textSize="32sp" />

     <TextView
         android:id="@+id/result_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/buttons_layout"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/_0"
         android:textAlignment="textEnd"
         android:textColor="@color/white"
         android:textSize="64sp" />


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
         android:background="#0d1b2a"
         android:paddingVertical="16dp"
         android:id="@+id/buttons_layout">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal">

               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_c"
                   android:backgroundTint="#F44336"
                   android:text="@string/c" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_open_bracket"
                   android:backgroundTint="#A1A1A1"
                   android:text="@string/open_Bracket" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:backgroundTint="#A1A1A1"
                   android:id="@+id/button_close_bracket"
                   android:text="@string/close_Bracket" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_divide"
                   android:backgroundTint="#274c77"
                   android:text="@string/slash" />



          </LinearLayout>


          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal">

               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:backgroundTint="#1b263b"
                   android:textSize="32sp"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_7"
                   android:text="@string/_7" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:backgroundTint="#1b263b"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_8"
                   android:text="@string/_8" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:backgroundTint="#1b263b"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_9"
                   android:text="@string/_9" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_multiply"
                   android:backgroundTint="#274c77"
                   android:text="@string/asterisk" />

          </LinearLayout>



          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal">

               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:backgroundTint="#1b263b"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_4"
                   android:text="@string/_4" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:backgroundTint="#1b263b"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_5"
                   android:text="@string/_5" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:backgroundTint="#1b263b"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_6"
                   android:text="@string/_6" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_plus"
                   android:backgroundTint="#274c77"
                   android:text="@string/add" />



          </LinearLayout>



          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal">

               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:backgroundTint="#1b263b"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_1"
                   android:text="@string/_1" />


               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:backgroundTint="#1b263b"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_2"
                   android:text="@string/_2" />


               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:backgroundTint="#1b263b"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_3"
                   android:text="@string/_3" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_minus"
                   android:backgroundTint="#274c77"
                   android:text="@string/subtract" />



          </LinearLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal">

               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="20sp"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_ac"
                   android:backgroundTint="#F44336"
                   android:text="@string/ac" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:backgroundTint="#1b263b"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_0"
                   android:text="@string/zero" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:backgroundTint="#1b263b"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_dot"
                   android:text="@string/dot" />



               <com.google.android.material.button.MaterialButton
                   android:layout_width="72dp"
                   android:layout_height="72dp"
                   app:cornerRadius="15dp"
                   style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                   android:textSize="32sp"
                   android:textColor="@color/white"
                   android:layout_margin="12dp"
                   android:id="@+id/button_equals"
                   android:backgroundTint="#274c77"
                   android:text="@string/equals_To" />

          </LinearLayout>


     </LinearLayout>



</RelativeLayout>